--- a/gb/23/1/6/n13900901.md
+++ b/gb/23/1/6/n13900901.md
@@ -2,7 +2,9 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>3岁男孩与马有特殊感情 喜欢互相“击掌”</h2>
-<a href="https://d2fq83y0z2h6n4.cloudfront.net/K5sTLgoYz"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/01/id13900927-Kolten-and-Maple-horse-1200x720-600x400.jpg" />///image2=```diff
+- 三岁的小男孩科尔滕（Kolten）可爱地抱着这只母马的腿。（Shari提供）
+```
 <h6>三岁的小男孩科尔滕（Kolten）可爱地抱着这只母马的腿。（Shari提供）
 </h6>
 <hr>
@@ -13,7 +15,7 @@
 <p>“它是一匹非常适合孩子的马！它对所有的人都很<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%AE%BD%E5%AE%B9.md#1">宽容</a>。它对孩子们做的所有傻事都非常宽容。”梅丽娜说。</p>
 <figure style="width: 501px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2022/10/11/Kolten-Maple-Melina-2-1200x1208.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2022/10/11/Kolten-Maple-Melina-2-1200x1208.jpg" width="501" b="504" /></a><figcaption class="wp-caption-text">（Shari提供）</figcaption></figure>
 <p>当科尔滕从牧场叫它时，梅普会跑过来。</p>
-<p style="text-align: center;"><a src=""></a><a href="https://d2fq83y0z2h6n4.cloudfront.net/K5sTLgoYz"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/d2bfc104-64d1-4935-84ba-9b852060e7a2?r=16x9&amp;d=97" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a><br />
+<p style="text-align: center;"><a src=""></a><a href="https://divmj5v44rbg.cloudfront.net/R6qTLgoYy"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/d2bfc104-64d1-4935-84ba-9b852060e7a2?r=16x9&amp;d=97" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a><br />
 (Courtesy of @maple_nala7)</p>
 <p>这家人住在一个小农场，并在2021年得到了梅普。梅丽娜说她想要一匹马大约有20年了。最后，在选择留在家里抚养儿子而不是继续做护士工作后，感觉是时候了，梅丽娜马上开始寻找合适的动物。</p>
 <p>她没有找很久。梅普只是他们去看的第二匹马，而这匹现年八岁的油漆马是再合适不过了。</p>
@@ -32,7 +34,7 @@
 <figure style="width: 600px" class="wp-caption aligncenter"><ahref=" https://img.theepochtimes.com/assets/uploads/2022/10/11/Kolten-Maple-Melina-7-1200x800.jpg" target="_blank" rel="noreferrer noopener"> <img class="" src="https://img.theepochtimes.com/assets/uploads/2022/10/11/Kolten-Maple-Melina-7-1200x800.jpg" width="600" b="400" /></a><figcaption class="wp-caption-text">（Shari提供）</figcaption></figure>
 <p>当梅丽娜看到她的孩子陶醉在她自己一生挚爱的马中时，她的心融化了。她说：“我不是和马一起长大的，但从我7岁起就想拥有一匹马。”我迫不及待地想与梅普和科尔滕创造更多的回忆。</p>
 <p>她说，到目前为止，他们最甜蜜的时刻之一是当科尔滕在骑完马后把马匹送进马厩，他会说：“谢谢你让我骑着你，梅梅！”</p>
-<p>“他把它的头拉下来，在它的鼻子上亲一下。”这位妈妈说。</p>
+<p>“他把它的头拉下来，在它的鼻子上亲一下。”这位妈妈说。◇</p>
 <p>责任编辑：韩玉#</p>
 	
 <hr>
@@ -47,31 +49,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/30/n10009267.md#1" target="_blank">林辉：相声演员马三立苦涩的“逗你玩”人生</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/21/n2972092.md#1" target="_blank">修炼者的心声：请支持正义良知  选择美好未来</a></li><hr>
+<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/26/n10515170.md#1" target="_blank">林辉：蔡元培东床快婿的惨痛人生</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/5/13/n7891043.md#1" target="_blank">永恒的感恩</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896689.md#1">在工地发生事故濒死 韩国男子出现特异功能</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896520.md#1">【时事人物】风投神话破灭 孙正义退场之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896482.md#1">【未解之谜】憋了很久 一定要说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896885.md#1">《推背图》第五十六象奥义对应当今大疫幻变</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897337.md#1">【百年真相】赔了恋人又折命 共谍关露的悲剧</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900752.md#1">【全球新闻】大陆火葬场弃遗骨 感染潮蔓延农村</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/5/n13900273.md#1">【秦鹏观察】新年第一声雷 党媒高喊“斗争”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900365.md#1">【新闻看点】习近平被迫掉头 几个讯号令他震惊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13898850.md#1">告别荒诞2022——北京某教授最犀利嘲讽</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898823.md#1">王友群：习近平2023年面临四大挑战</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899515.md#1">女网重申先解决彭帅性侵案 再考虑中国赛事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898840.md#1">范冰冰晒无名指戴巨型红宝石 被传好事近了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899526.md#1">梁朝伟戴公仔头套滑雪 获网友大赞“好可爱”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13898066.md#1">加拿大新唐人将推出奇幻电影《再次成为神》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898809.md#1">黄磊确诊十多天未痊愈 透露演员老父还在医院</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/5/n13899955.md#1">KID报喜当爸爸 “亲剪脐带”全程跟拍儿子诞生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896472.md#1">增强免疫力的6种有效方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/28/n13893567.md#1">研究：忧郁患者都缺“镁”这营养素不可轻忽</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/31/n13896469.md#1">癌症术后15年未复发 日本医生分享5秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/24/n13891163.md#1">研究：吃盐太少可能和太多一样有危险</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13898889.md#1">预防“沉默杀手” 留意肾脏病 5大症状</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061883.md#1">七月中元 为何民间称之为“鬼节”？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062286.md#1">【未解之谜】不翼而飞的绝密文件</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14049844.md#1">鬼迷心窍异想天开：买冥官在冥间得富贵</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064930.md#1">【新闻五人行】恐惧西方福利 习有经济大招吗？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065190.md#1">【全球新闻】中共公布新地图 多邻国群起抗议</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064651.md#1">【中国禁闻】海外百万人观看中共禁播的纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063629.md#1">王友群：中共即将灭亡的十大表现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063653.md#1">岳山： 孙志刚落马四看点 习敲打三名前常委？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063980.md#1">中国房地产爆雷拖累供应商 近3万亿货款待付</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063538.md#1">中风12年半身不遂 武打明星刘家辉近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064267.md#1">因嫖娼遭封杀 李云迪首现身国外街头喝咖啡</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064222.md#1">曝《好声音》2学员挺李玟后消失 甄妮表担忧</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064302.md#1">遭《好声音》黑料波及 那英澳门演唱会延期</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063512.md#1">朱芯仪抗癌疗程结束 卫斯理嗨喊妻“毕业了”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060476.md#1">断食可损伤刺突蛋白 对抗阿尔茨海默病和癌症</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063925.md#1">飞行员告诫飞机乘客守规矩 这么做恐遭禁飞</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063484.md#1">无法忽视的女性高发“癌”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056483.md#1">好做好吃 6款药膳帮你护肝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063138.md#1">【美食天堂】油条家庭做法</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/6/n13900901.htm">3岁男孩与马有特殊感情 喜欢互相“击掌”</a></p><hr>
