--- a/gb/23/3/2/n13941356.md
+++ b/gb/23/3/2/n13941356.md
@@ -21,7 +21,7 @@
 <p>自从完成三节课后，她就重新开始了自己的学业，并且没有再实施任何<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%8D%E8%89%AF%E8%A1%8C%E4%B8%BA.md#1">不良行为</a>。</p>
 <p>另一名13岁的女孩与其他熟知的青少年犯罪者有牵连，并在年长青年的压力下因两项侵犯财产罪受到警告。当她完成马术课程后，她不再与其他少年犯来往，也没再进行任何违法犯罪行为。</p>
 <p>“然而，这绝不是一个简单的修补方法。因为青少年犯罪通常涉及多方面的问题，其中包括家庭暴力、药物滥用以及心理健康等，你永远不可能仅通过一个计划就能解决所有这些问题”，安德鲁说，“当然，作为警察，你可以逮捕人，但还有其它一些更全面、更新颖的的方法，来与孩子打交道。</p>
-<p>“有时会令人沮丧，因为你并不是总能得到孩子父母的支持，而且很难精确衡量它的成效。但当你知道你已经成功改变了一个孩子的生命轨迹时，你就会觉得一切付出都是值得的。而且这种情况经常发生，这足以激励你继续前进。”</p>
+<p>“有时会令人沮丧，因为你并不是总能得到孩子父母的支持，而且很难精确衡量它的成效。但当你知道你已经成功改变了一个孩子的生命轨迹时，你就会觉得一切付出都是值得的。而且这种情况经常发生，这足以激励你继续前进。”◇</p>
 <p><i><span style="font-weight: 400;">（英文大纪元记者Jessie Zhang</span></i><i><span style="font-weight: 400;">对本文有贡献。</span></i><i><span style="font-weight: 400;">）</span></i></p>
 <p>责任编辑：韩玉#</p>
 	
@@ -37,31 +37,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/6/n11434332.md#1" target="_blank">俞元：与中共“求同存异” 无疑引狼入室</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/6/n11637774.md#1" target="_blank">澳媒刊登希腊裔法轮功学员的修炼故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/17/n10491766.md#1" target="_blank">朝鲜战争锣鼓掩盖下的暴力土改</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/25/n10932219.md#1" target="_blank">褒奖法轮功 推崇普世价值</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924740.md#1">祈祷中神的回应：救人的神已来在人世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923680.md#1">【古道人生】逃难女不甘受辱 一掌击退镖师</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938144.md#1">有前世记忆作家：我在母亲怀孕4个月时投胎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/9/n13798623.md#1">时空可压缩？奇异的梦中之梦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937718.md#1">【未解之谜】植物口香糖？恶魔之果？槟榔的秘密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/1/n13940825.md#1">【新闻大家谈】中共割小韭菜 逼少儿买医保</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/1/n13940278.md#1">【远见快评】习推刀把子治国 由丁薛祥掌控？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/28/n13940112.md#1">【环球直击】白宫令联邦政府移除TikTok</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939152.md#1">中国最大退休潮将至 “银发就业”隐忧重重</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939260.md#1">遭囚禁15年“世界最孤独狮子”终获自由</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939374.md#1">中共国安系或重组 分析：丁薛祥成内斗焦点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939296.md#1">韩宜邦向林萱瑜求婚成功 获杨祐宁等艺人助攻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/26/n13938895.md#1">黄子佼晒与孟耿如对话图 曝夫妻俩恢复幽默感</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939607.md#1">遭传与古天乐结婚度蜜月 杨颖诉讼案判决出炉</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/28/n13940169.md#1">郑欣宜继承遗产是乌龙？沈殿霞生前挚友解密</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939192.md#1">顶7度寒流拍落水戏 王瞳黄文星在港边冻到发抖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939267.md#1">访问200多名富翁 美作家分享其致富共通点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939090.md#1">【美食天堂】糯米南瓜盅做法～切日本南瓜窍门！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/28/n13939693.md#1">到阿里山石棹赏夜樱追云海琉璃光和观银河</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/13/n13928999.md#1">创业需要胆识 专家分享9个经商秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13931076.md#1">手绘食旅日志 逛越南传统市场体验在地生活</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061883.md#1">七月中元 为何民间称之为“鬼节”？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062286.md#1">【未解之谜】不翼而飞的绝密文件</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14049844.md#1">鬼迷心窍异想天开：买冥官在冥间得富贵</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064930.md#1">【新闻五人行】恐惧西方福利 习有经济大招吗？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065190.md#1">【全球新闻】中共公布新地图 多邻国群起抗议</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064651.md#1">【中国禁闻】海外百万人观看中共禁播的纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063629.md#1">王友群：中共即将灭亡的十大表现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063653.md#1">岳山： 孙志刚落马四看点 习敲打三名前常委？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063980.md#1">中国房地产爆雷拖累供应商 近3万亿货款待付</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063538.md#1">中风12年半身不遂 武打明星刘家辉近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064267.md#1">因嫖娼遭封杀 李云迪首现身国外街头喝咖啡</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064222.md#1">曝《好声音》2学员挺李玟后消失 甄妮表担忧</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064302.md#1">遭《好声音》黑料波及 那英澳门演唱会延期</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063512.md#1">朱芯仪抗癌疗程结束 卫斯理嗨喊妻“毕业了”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060476.md#1">断食可损伤刺突蛋白 对抗阿尔茨海默病和癌症</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063925.md#1">飞行员告诫飞机乘客守规矩 这么做恐遭禁飞</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063484.md#1">无法忽视的女性高发“癌”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056483.md#1">好做好吃 6款药膳帮你护肝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063138.md#1">【美食天堂】油条家庭做法</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/3/2/n13941356.htm">澳洲警方巧用马引导青少年远离犯罪 初见成效</a></p><hr>
