--- a/gb/23/8/24/n14060646.md
+++ b/gb/23/8/24/n14060646.md
@@ -114,14 +114,14 @@
 
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/14/n14053956.md#1">【更新】乔州选举案 川普等被指控41项罪名</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065469.md#1">美零售业遭抢损失惊人 警方归咎于零保释金政策</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065420.md#1">白宫要求国会提供短期资金 以避免政府关门</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065419.md#1">美国印尼开始军演 19国参与捍卫印太稳定</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065312.md#1">【名家专栏】美日韩三国亮剑中共</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065437.md#1">【时事金扫描】乌军无人机战役 美军也大干快上</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065489.md#1">【新闻看点】习近平真怒了？拜登这锤太重</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/14/n10217201.md#1" target="_blank">极限饥饿：灵与肉的双重凌迟（上）</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/5/10/n7881771.md#1" target="_blank">大法开传 福泽众生</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/10/7/23/n2974541.md#1" target="_blank">鲜为人知的马克思之五：自私的马克思</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/6/n11238020.md#1" target="_blank">四百万难治好的脑瘤并发症 修大法痊愈</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
