--- a/gb/16/11/1/n8448884.md
+++ b/gb/16/11/1/n8448884.md
@@ -2,7 +2,7 @@
 <table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>美阿拉巴马州天然气管道爆炸 火光冲天</h2>
-<a href="https://d2p9r31ubb8t81.cloudfront.net/E7pn5DU5b"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+///image2=
 <h6></h6>
 <hr>
 	<p>【大纪元2016年11月01日讯】<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>阿拉巴马州谢尔比县周一（31日）发生<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%A4%A9%E7%84%B6%E6%B0%94.md#1">天然气</a>管道<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%88%86%E7%82%B8.md#1">爆炸</a>，现场火光冲天、浓烟滚滚。目前事故已造成1人死亡、至少7人重伤，也令当地在两个月内第二次不得不关闭东海岸的天然气供应管道。</p>
@@ -14,7 +14,7 @@
 <p>据当地电台报导，火场面积达4公顷，警方说火势现仍升上约14米高空，不会马上扑熄。</p>
 <p>阿拉巴马州紧急事务管理署在推特上发文说，对管道爆炸周围地区实施了临时飞行限制。</p>
 <p>据报导，这已经是阿拉巴马州今年第五次因泄漏导致爆炸事件，包括9月份那次。这次事故发生后，天然气管道公司Colonial立即派出应急人员赶赴现场，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD.md#1">美国</a>管道及有害物质安全管理局（PHMSA）也派人前往现场。#</p>
-<p><a width="640" b="480" src=""></a><a href="https://d2p9r31ubb8t81.cloudfront.net/E7pn5DU5b"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/x8FOmS0TR2c?feature=oembed" frameborder="0" allowfullscreen></a></p>
+<p><a width="640" b="480" src=""></a><a href="https://d2n08tj75ohh5.cloudfront.net/W1zn5DU5o"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/x8FOmS0TR2c?feature=oembed" frameborder="0" allowfullscreen></a></p>
 <p>责任编辑：王若愚</p>
 	
 <hr>
@@ -29,31 +29,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/16/n10307016.md#1" target="_blank">心升：以史为镜看毛邪（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/29/n11417416.md#1" target="_blank">美大使发推特 谴责中共迫害法轮功</a></li><hr>
+<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/24/n10082527.md#1" target="_blank">谢泳：叶企孙饶毓泰的死</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/4/30/n9090867.md#1" target="_blank">从制鞋工到超级业务员的修炼人生</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945330.md#1">【未解之谜】罕见天象昭示红朝命数？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/6/n13944080.md#1">一代圣主康熙皇帝至孝之至 数十年如一日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945916.md#1">电视人患忧郁症陷绝境 因一本奇书改变命运</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/11/n13947696.md#1">【未解之谜】邮票上的预言</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/5/n13943724.md#1">妙不可言的舞剧《草船借箭》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13949970.md#1">【全球新闻】硅谷银行倒闭 拜登急安抚 确保储户安全</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/14/n13950265.md#1">【军事热点】俄军陷停滞 内讧和失控笼罩莫斯科</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949582.md#1">【百年真相】一个气球 暴露中共致命问题</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945412.md#1">组图：最安全的十款SUV 碰撞测试评级最高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948884.md#1">【翻墙必看】分析：谁投了李强的反对票</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948868.md#1">范冰冰现身奥斯卡红毯 获赞“一出场就赢了”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948868.md#1">范冰冰现身奥斯卡红毯 获赞“一出场就赢了”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948769.md#1">梁朝伟亚洲电影大奖封帝 刘嘉玲打开名单惊呆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949642.md#1">赵薇遭封杀一年半 47岁生日自拍照显憔悴</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948798.md#1">“什么戏都想演” 洪金宝叹演动作片难糊口</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13948969.md#1">奥斯卡获奖名单揭晓 杨紫琼成首位亚裔影后</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945412.md#1">组图：最安全的十款SUV 碰撞测试评级最高</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/13/n13949469.md#1">2月份美国房市 拐点出现！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/12/n13948420.md#1">退休的最大挑战是什么？哈佛85年研究释疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/8/n13945694.md#1">保持大脑敏锐 胡萝卜不可忽视的6大健康益处</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/5/n13943660.md#1">干细胞模型揭示青光眼治疗的秘密</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/22/n14058514.md#1">他想杀死的女孩竟然是自己未来的妻子？！姻缘天注定！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14050043.md#1">【古道人生】祖父赖账杀人 四十年后孙子辈偿还</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/27/n14061883.md#1">七月中元 为何民间称之为“鬼节”？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062286.md#1">【未解之谜】不翼而飞的绝密文件</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/8/n14049844.md#1">鬼迷心窍异想天开：买冥官在冥间得富贵</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064930.md#1">【新闻五人行】恐惧西方福利 习有经济大招吗？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/1/n14065190.md#1">【全球新闻】中共公布新地图 多邻国群起抗议</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064651.md#1">【中国禁闻】海外百万人观看中共禁播的纪录片</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063629.md#1">王友群：中共即将灭亡的十大表现</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063653.md#1">岳山： 孙志刚落马四看点 习敲打三名前常委？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063980.md#1">中国房地产爆雷拖累供应商 近3万亿货款待付</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063538.md#1">中风12年半身不遂 武打明星刘家辉近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064267.md#1">因嫖娼遭封杀 李云迪首现身国外街头喝咖啡</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14064222.md#1">曝《好声音》2学员挺李玟后消失 甄妮表担忧</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064302.md#1">遭《好声音》黑料波及 那英澳门演唱会延期</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063512.md#1">朱芯仪抗癌疗程结束 卫斯理嗨喊妻“毕业了”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/24/n14060476.md#1">断食可损伤刺突蛋白 对抗阿尔茨海默病和癌症</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/30/n14063925.md#1">飞行员告诫飞机乘客守规矩 这么做恐遭禁飞</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063484.md#1">无法忽视的女性高发“癌”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/18/n14056483.md#1">好做好吃 6款药膳帮你护肝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/29/n14063138.md#1">【美食天堂】油条家庭做法</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/16/11/1/n8448884.htm">美阿拉巴马州天然气管道爆炸 火光冲天</a></p><hr>
